--- a/notebook/2018-02-22-ref-tissue-proj-testdata/2018-02-22-ref-tissue-proj-testdata.Rmd
+++ b/notebook/2018-02-22-ref-tissue-proj-testdata/2018-02-22-ref-tissue-proj-testdata.Rmd
@@ -8,8 +8,10 @@ featimg: "runtime-length-2.png"
 Test runs of variant callers were performed using as input data the BAM files from the common sample from the reference tissue project.  Runtime were measured as a function of the length and number of CPU cores.
 
 The analysis had the following major steps
-1. excise segments of various lengths (between 1 and 100 MB) starting at chr1 50,000,000 using `do-aln-subregion` 
-1. run callers e.g. `do-mystrelka2Somatic`
+1. take the BAMs for the paired common sample: `Common_7_NeuN_DO16090243-final-all.bam` and `Fibro_Common_7_DO16090243-final-all.bam`
+1. excise segments of various lengths (between 1 and 100 MB) starting at chr1:50,000,000 using `do-aln-subregion` 
+1. run callers e.g. using `do-mystrelka2Somatic` and store runtime results
+1. parse runtime results using `runtime-length-ncores`
 
 ```{r echo=FALSE, warning=FALSE}
 library(lme4)
@@ -31,9 +33,9 @@ runt$length.MB <- as.integer(sub("([[:digit:]]+)MB", "\\1", as.character(runt$le
 runt$length.MB <- ifelse(is.na(runt$length.MB), 3235, runt$length.MB)
 ```
 
-The following plots show how runtime scales with the size of the data.  
+The following plots show how runtime scales with the size of the data.
 
-```{r runtime-length echo=FALSE}
+```{r runtime-length, echo=TRUE}
 arg <- list(xlab = "length (bases)", ylab = "real time",
             labels = c("1s", "7.8s", "1m", "7.8m", "1h", "7.8h", "2.5d", "2.8w", "5m"),
             at.lin = 0:8 / 2, at.log = 60 ^ c(0:8 / 2))
@@ -41,6 +43,16 @@ xyplot(runtime / 60 ~ length.MB, data = runt, groups = caller, subset = numcores
 xyplot(log(runtime, base = 60) ~ log10(length.MB * 1e6), data = runt, groups = caller, subset = numcores == 6, scales = list(y = list(at = arg$at.lin, labels = arg$labels)), ylim = c(1, 2.5), grid = TRUE, ylab = "runtime (log scale)", xlab = "log length (base)", type = "b", auto.key = list(lines = TRUE, points = FALSE), main = "Runtime at 6 cores")
 ```
 
-```{r runtime-ncores echo=FALSE}
+The next graph presents runtimes at different number of CPU cores.
+
+```{r runtime-ncores, echo=FALSE}
 xyplot(runtime / 60 ~ numcores, data = runt, groups = caller, subset = length == "1MB", ylab = "runtime, min", xlab = "number of cores", grid = TRUE, main = "Runtime at 1MB length")
+```
+
+The number of all SNV candidates in the whole genome by strelka2Somatic caller and of those that `PASS`ed the default filters:
+
+```{r engine="bash"}
+vcf="../../results/2018-02-22-ref-tissue-proj-testdata/WGS/6proc/strelka2Somatic/results/variants/somatic.snvs.vcf.gz"
+zcat $vcf | sed -n '/^#CHROM/,$ p' | wc -l
+zcat $vcf | grep -c PASS
 ```
