--- a/notebook/2018-03-20-benchmark-testdata/2018-03-20-benchmark-testdata.Rmd
+++ b/notebook/2018-03-20-benchmark-testdata/2018-03-20-benchmark-testdata.Rmd
@@ -33,10 +33,10 @@ runt$length.MB <- as.integer(sub("([[:digit:]]+)MB", "\\1", as.character(runt$le
 # the whole genome is 3235 MB long according to https://en.wikipedia.org/wiki/Human_genome
 runt$length.MB <- ifelse(is.na(runt$length.MB), 3235, runt$length.MB)
 runt <- runt[with(runt, order(numcores, length.MB)), ]
-c(levels(runt$caller)[1:3], "Tnseq.Mutect2")
+levels(runt$caller) <- sub("Tnseq", "Tnseq.Mutect2", levels(runt$caller))
 ```
 
-Below are the runtimes.
+Below are the runtimes.  Note that all callers were run on 32 cores except for somaticSniper, which has only single threaded mode.
 
 ```{r runtimes-dotplot}
 dotplot(caller ~ runtime / 3600 | length, data = runt, scales = list(x = list(relation = "free")), grid = TRUE, xlab = "runtime, hours", layout = c(1, 2))
