Venn diagrams for common sample 100Mb subset

--- a/notebook/2018-02-22-ref-tissue-proj-testdata/2018-02-22-ref-tissue-proj-testdata.Rmd
+++ b/notebook/2018-02-22-ref-tissue-proj-testdata/2018-02-22-ref-tissue-proj-testdata.Rmd
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Test runs on the common sample BAMs
-tags: [ strelka2, mutect2, tnseq ]
+tags: [ strelka2, mutect2, tnseq, lofreq, somaticsniper ]
 featimg: "runtime-length-2.png"
 ---
 
