--- a/notebook/2018-04-08-call-set-concordance/2018-04-08-call-set-concordance.Rmd
+++ b/notebook/2018-04-08-call-set-concordance/2018-04-08-call-set-concordance.Rmd
@@ -21,22 +21,43 @@ lattice.options(default.theme = "standard.theme")
 ```{r message=FALSE}
 library(VariantAnnotation)
 library(VennDiagram)
+source("2018-04-08-call-set-concordance.R")
 ```
 
 ```{r cache=TRUE}
+samples <- c("common.sample", "benchmark")
+names(samples) <- samples
+segs <- c(paste0(c(1, 3, 10, 30, 100), "MB"), "wgs")
+names(segs) <- segs
+vartypes <- c("snvs", "indels")
+names(vartypes) <- vartypes
 callers <- c("lofreqSomatic", "somaticSniper", "strelka2Germline", "strelka2Somatic", "Tnseq")
 names(callers) <- sub("Tnseq", "Tnseq.Mutect2", callers)
-set.types <- paste(rep(c("common-sample", "benchmark"), each = 2), c("snvs", "indels"), sep = "-")
-names(set.types) <- gsub("-", ".", set.types)
-fl <- lapply(set.types, paste0, "/", callers, ".vcf.gz")
-fl <- lapply(fl, `names<-`, names(callers))
-vcf <- lapply(fl[1:2], lapply, readVcf, "hg19")
+# benchmark study
+bm.vcf <- import.across.segments(samples[2], sgs = c("1MB", "wgs"), cal = callers)
 ```
 
-```{r venn-common-sample-snvs}
-grid.draw(venn.diagram(lapply(vcf$common.sample.snvs, function(x) row.names(x)), NULL))
+```{r cache=TRUE}
+# common sample
+cs.vcf <- import.across.segments(samples[1], sgs = segs[- length(segs)])
 ```
 
-```{r venn-common-sample-indels}
-grid.draw(venn.diagram(lapply(vcf$common.sample.indels, function(x) row.names(x)), NULL))
+```{r venn-common-sample-100MB-snvs}
+l <- lapply(cs.vcf[["100MB"]]$snvs, function(x) row.names(x))
+grid.draw(venn.diagram(l, NULL))
+```
+
+```{r venn-common-sample-100MB-indels}
+l <- lapply(cs.vcf[["100MB"]]$indels, function(x) row.names(x))
+grid.draw(venn.diagram(l, NULL))
+```
+
+```{r venn-benchmark-wgs-snvs}
+l <- lapply(bm.vcf[["wgs"]]$snvs, function(x) row.names(x))
+grid.draw(venn.diagram(l, NULL))
+```
+
+```{r venn-benchmark-wgs-indels}
+l <- lapply(bm.vcf[["wgs"]]$indels, function(x) row.names(x))
+grid.draw(venn.diagram(l, NULL))
 ```
