--- a/notebook/2017-05-24-alignment-stats/2017-05-24-alignment-stats.Rmd
+++ b/notebook/2017-05-24-alignment-stats/2017-05-24-alignment-stats.Rmd
@@ -20,7 +20,7 @@ source("2017-05-24-alignment-stats.R")
 
 ```{r cache=TRUE}
 tissues <- c("NeuN_pl", "NeuN_mn", "muscle")
-fai <- get.fai()
+fai <- get.fai("~/data/GRCh37/karyotypic-order/Homo_sapiens.GRCh37.dna.fa.fai")
 chromosomes <- grep("^GL", fai$contig, value = TRUE, invert = TRUE)
 rd.genome <- get.read.depths(fai, tissues)
 rd.repres <- get.read.depths(fai, tissues, suffices = "chr1_119,500,001-121,500,000")
@@ -37,7 +37,6 @@ rd.repres <-
                    }))
 rd.repres.100 <- rd.repres[seq(1, nrow(rd.repres), by = 100), ] # for test purposes
 rd.genome.100 <- rd.genome[seq(1, nrow(rd.genome), by = 100), ] # for test purposes
-fastaix <- "~/data/GRCh37/dna/Homo_sapiens.GRCh37.dna.fa.fai"
 ```
 
 ```{r depth-hist}
